Clean up some imports and usages of deprecated APIs